open_mx/log/build_2024-11-11_21-18-45/robot_omx/stdout_stderr.log
running egg_info
writing ../../build/robot_omx/robot_omx.egg-info/PKG-INFO
writing dependency_links to ../../build/robot_omx/robot_omx.egg-info/dependency_links.txt
writing entry points to ../../build/robot_omx/robot_omx.egg-info/entry_points.txt
writing requirements to ../../build/robot_omx/robot_omx.egg-info/requires.txt
writing top-level names to ../../build/robot_omx/robot_omx.egg-info/top_level.txt
reading manifest file '../../build/robot_omx/robot_omx.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/robot_omx/robot_omx.egg-info/SOURCES.txt'
running build
running build_py
copying robot_omx/inv_kin_client.py -> /home/lucasb/open_mx/build/robot_omx/build/lib/robot_omx
running install
running install_lib
copying /home/lucasb/open_mx/build/robot_omx/build/lib/robot_omx/inv_kin_client.py -> /home/lucasb/open_mx/install/robot_omx/lib/python3.10/site-packages/robot_omx
byte-compiling /home/lucasb/open_mx/install/robot_omx/lib/python3.10/site-packages/robot_omx/inv_kin_client.py to inv_kin_client.cpython-310.pyc
  File "/home/lucasb/open_mx/install/robot_omx/lib/python3.10/site-packages/robot_omx/inv_kin_client.py", line 46
    				 f'Joint 2: {joint_angles.q_2}\n'\ 
    				                                   ^
SyntaxError: unexpected character after line continuation character

running install_data
running install_egg_info
removing '/home/lucasb/open_mx/install/robot_omx/lib/python3.10/site-packages/robot_omx-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/robot_omx/robot_omx.egg-info to /home/lucasb/open_mx/install/robot_omx/lib/python3.10/site-packages/robot_omx-0.0.0-py3.10.egg-info
running install_scripts
Installing inverse_client script to /home/lucasb/open_mx/install/robot_omx/lib/robot_omx
Installing inverse_server script to /home/lucasb/open_mx/install/robot_omx/lib/robot_omx
Installing joint_listener script to /home/lucasb/open_mx/install/robot_omx/lib/robot_omx
writing list of installed files to '/home/lucasb/open_mx/build/robot_omx/install.log'
